<resources>
    <string name="app_name">Euphoria</string>
    <string name="app_version_label">Lemon</string>

    <string name="select_room_hint">Room name</string>
    <string name="join_room_text">Join room</string>
    <string name="content_desc_btn_settings">Show settings</string>

    <string name="message_entry_hint">Message</string>
    <string name="message_nick_hint">Nick</string>
    <string name="not_available">N/A</string>
    <string name="collapser_show">Show %1$d %2$s</string>
    <string name="collapser_hide">Hide %1$d %2$s</string>
    <plurals name="collapser_replies">
        <item quantity="one">reply</item>
        <item quantity="other">replies</item>
    </plurals>
    <string name="collapser_fallback">Collapse/uncollapse</string>
    <string name="room_action_users_title">Users</string>
    <string name="room_action_settings_title">Settings</string>
    <string name="heading_users">Users:</string>

    <string name="menu_rooms_title">Rooms</string>
    <string name="menu_rooms_open">Open room list</string>
    <string name="menu_rooms_close">Close room list</string>
    <string name="menu_rooms_join">Join…</string>

    <string name="status_unknown">Unknown?!</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_connected">Online</string>
    <string name="status_reconnecting">Reconnecting…</string>
    <string name="status_disconnected">Disconnected</string>

    <string name="title_settings">Settings</string>
    <string name="setting_private_mode_title">Private mode</string>
    <string name="setting_private_mode_summary">
        When enabled, you will appear as a new person every time you open a room. When disabled, you will regain your
        old identity.
    </string>
    <string name="setting_delete_cookie_title">Delete cookie</string>
    <string name="setting_delete_cookie_summary">
        This will make you appear as a new person (outside of private mode)
    </string>
    <string name="setting_delete_cookie_confirmation">
        Really delete the identity cookie? This cannot be undone.
    </string>
    <string name="setting_delete_cookie_commit">Delete</string>

    <string name="title_about">About</string>
    <string name="version_line">Version %1$s %2$s</string>
    <string name="update_check">Check for updates</string>
    <string name="update_check_busy">Checking for updates…</string>
    <string name="update_check_failed">Update check failed.</string>
    <string name="update_check_no_result">You are up-to-date.</string>
    <string name="update_check_update_available">Update available to version %1$s!</string>
    <string name="update_check_download">Download %1$s APK</string>
    <string name="update_check_open_failed">Could not find application to open the APK with</string>

    <string name="cancel">Cancel</string>
</resources>
