<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:layout_margin="16sp"
              tools:context="io.euphoria.xkcd.app.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="36sp"/>

    <EditText
        android:id="@+id/room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/select_room_hint"/>

    <Button
        android:id="@+id/join_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_room_text"/>
</LinearLayout>
